syntax = "proto3";

option csharp_namespace = "RepoAnalisys.Grpc";

import "protos/branch_query.proto";

package repository;

service AccountsOperator {
  rpc GetAuthorBranches (BranchQuery) returns (BranchesResponse);
  rpc PostAuthorBranch (BranchQuery) returns (SingleBranchResponse);
}

message BranchesResponse {
  repeated string branch_titles = 1;
}

message SingleBranchResponse {
  repeated string branch_title = 1;
}