syntax = "proto3";

option csharp_namespace = "RepoAnalisys.Grpc";

package repository;

import "google/protobuf/timestamp.proto";

message BranchQuery {
  string repo_title = 1;
  string baseBranch = 2;
  string owner_github_username = 3;
  string author_github_username = 4;
  google.protobuf.Timestamp since = 5;
  google.protobuf.Timestamp until = 6;
}